# kodibot

./: .gitignore  .gitmodules  CMakeLists.txt  Containerfile  flake.nix  run.sh
.github/workflows/: docker-publish.yml
podman/: kodibot.conf.template  kodibot.container
src/: CMakeLists.txt  main.cpp
src/kodibot/: CMakeLists.txt
src/kodibot/bot/: CMakeLists.txt  bot.cppm  module.cppm
src/kodibot/kodi/: CMakeLists.txt  client.cppm  module.cppm
src/kodibot/telegram/: CMakeLists.txt  bot_auth.cppm  client.cppm  client_interface.cppm  client_manager.cppm  downcast.cppm  module.cppm  receiver.cppm
src/kodibot/util/: CMakeLists.txt  functional.cppm  module.cppm  signal.cppm
